
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int avail_in; int avail_out; int total_out; int * next_out; int * next_in; scalar_t__ opaque; scalar_t__ zfree; scalar_t__ zalloc; } ;
typedef TYPE_1__ z_stream ;
typedef scalar_t__ voidpf ;
typedef int u_char ;
typedef scalar_t__ free_func ;
typedef scalar_t__ alloc_func ;


 int Z_BEST_COMPRESSION ;
 int Z_FINISH ;
 int deflate (TYPE_1__*,int ) ;
 int deflateEnd (TYPE_1__*) ;
 scalar_t__ deflateInit (TYPE_1__*,int ) ;
 int exit (int) ;
 int fputs (char*,int ) ;
 int stdout ;

int zip_it(u_char *in, int size, u_char *out, int maxsz) {
    z_stream z;
    int ret;

    z.zalloc = (alloc_func)0;
    z.zfree = (free_func)0;
    z.opaque = (voidpf)0;

    if(deflateInit(&z, Z_BEST_COMPRESSION)) {
        fputs("\nError: zlib initialization error\n", stdout);
        exit(1);
    }

    z.next_in = in;
    z.avail_in = size;
    z.next_out = out;
    z.avail_out = maxsz;
    deflate(&z, Z_FINISH);

    ret = z.total_out;
    deflateEnd(&z);
    return(ret);
}
