; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_604.c_zip_it.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_604.c_zip_it.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32*, i32*, i64, i64, i64 }

@Z_BEST_COMPRESSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"\0AError: zlib initialization error\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@Z_FINISH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zip_it(i32* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 7
  store i64 0, i64* %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 6
  store i64 0, i64* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 5
  store i64 0, i64* %13, align 8
  %14 = load i32, i32* @Z_BEST_COMPRESSION, align 4
  %15 = call i64 @deflateInit(%struct.TYPE_5__* %9, i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %4
  %18 = load i32, i32* @stdout, align 4
  %19 = call i32 @fputs(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %18)
  %20 = call i32 @exit(i32 1) #3
  unreachable

21:                                               ; preds = %4
  %22 = load i32*, i32** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 4
  store i32* %22, i32** %23, align 8
  %24 = load i32, i32* %6, align 4
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  store i32 %24, i32* %25, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 3
  store i32* %26, i32** %27, align 8
  %28 = load i32, i32* %8, align 4
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* @Z_FINISH, align 4
  %31 = call i32 @deflate(%struct.TYPE_5__* %9, i32 %30)
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  store i32 %33, i32* %10, align 4
  %34 = call i32 @deflateEnd(%struct.TYPE_5__* %9)
  %35 = load i32, i32* %10, align 4
  ret i32 %35
}

declare dso_local i64 @deflateInit(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @fputs(i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @deflate(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @deflateEnd(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
